--- a/src/main/resources/templates/cliente-buscar.html
+++ b/src/main/resources/templates/cliente-buscar.html
@@ -4,12 +4,12 @@
     <title>Buscar Cliente</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gray-100 text-gray-800">
+  <body class="font-mono dark:bg-gray-800 text-gray-100">
     <div class="container mx-auto py-10">
       <h1 class="text-2xl font-bold mb-4">Buscar Cliente</h1>
       <form action="/cliente/buscar" method="get" class="flex space-x-4">
         <!-- Campo select para elegir el criterio de búsqueda -->
-        <select name="criterio" class="border rounded py-2 px-3">
+        <select name="criterio" class="text-gray-800 border rounded py-2 px-3">
           <option value="nombre">Nombre</option>
           <option value="cuit">Cuit</option>
           <option value="email">Email</option>
@@ -20,7 +20,7 @@
           type="text"
           name="busqueda"
           placeholder="Buscar por nombre cliente, cuit o email"
-          class="border rounded w-full py-2 px-3"
+          class="border text-gray-800 rounded w-full py-2 px-3"
           required
         />
 
