--- a/src/main/resources/templates/itemmenu-buscar.html
+++ b/src/main/resources/templates/itemmenu-buscar.html
@@ -4,12 +4,12 @@
     <title>Buscar ItemMenu</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gray-100 text-gray-800">
+  <body class="dark:bg-gray-800 text-gray-100 font-mono">
     <div class="container mx-auto py-10">
       <h1 class="text-2xl font-bold mb-4">Buscar ItemMenu</h1>
       <form action="/itemmenu/buscar" method="get" class="flex space-x-4">
         <!-- Campo select para elegir el criterio de búsqueda -->
-        <select name="criterio" class="border rounded py-2 px-3">
+        <select name="criterio" class="text-gray-800 border rounded py-2 px-3">
           <option value="nombre">Nombre</option>
           <option value="cuit">Categoria</option>
         </select>
@@ -18,7 +18,7 @@
           type="text"
           name="busqueda"
           placeholder="Buscar por nombre del item o su categoria"
-          class="border rounded w-full py-2 px-3"
+          class="text-gray-800 border rounded w-full py-2 px-3"
           required
         />
 
@@ -41,7 +41,6 @@
           </li>
         </ul>
       </div>
-
       <!-- Si no hay resultados -->
       <div th:if="${#lists.isEmpty(itemsmenu)}" class="mt-6">
         <p>No se encontraron items que coincidan con la búsqueda.</p>
