--- a/src/main/resources/templates/pago-buscar.html
+++ b/src/main/resources/templates/pago-buscar.html
@@ -1,25 +1,36 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head>
+  <head>
     <title>Buscar Pago</title>
     <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100 text-gray-800">
+  </head>
+  <body class="dark:bg-gray-800 text-gray-100 font-mono">
     <div class="container mx-auto py-10">
-        <h1 class="text-2xl font-bold mb-4">Buscar Pago</h1>
-        <form action="/pago/buscar" method="get" class="flex space-x-4">
-             <!-- Campo select para elegir el criterio de búsqueda -->
-             <select name="criterio" class="border rounded py-2 px-3">
-                <option value="idPago">Id Pago</option>
-                <option value="cuitCliente">Cuit Cliente</option>
-            </select>
-            <!-- Campo de búsqueda -->
-            <input type="text" name="busqueda" placeholder="Buscar por Id del Pago o cuit del Cliente" class="border rounded w-full py-2 px-3" required>
+      <h1 class="text-2xl font-bold mb-4">Buscar Pago</h1>
+      <form action="/pago/buscar" method="get" class="flex space-x-4">
+        <!-- Campo select para elegir el criterio de búsqueda -->
+        <select name="criterio" class="text-gray-800 border rounded py-2 px-3">
+          <option value="idPago">Id Pago</option>
+          <option value="cuitCliente">Cuit Cliente</option>
+        </select>
+        <!-- Campo de búsqueda -->
+        <input
+          type="text"
+          name="busqueda"
+          placeholder="Buscar por Id del Pago o cuit del Cliente"
+          class="text-gray-800 border rounded w-full py-2 px-3"
+          required
+        />
 
-            <button type="submit" class="bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600">Buscar</button>
-        </form>
+        <button
+          type="submit"
+          class="bg-green-500 text-white py-2 px-4 rounded hover:bg-green-600"
+        >
+          Buscar
+        </button>
+      </form>
 
-              <!-- Mostrar los resultados de la búsqueda -->
+      <!-- Mostrar los resultados de la búsqueda -->
       <div th:if="${not #lists.isEmpty(pagos)}" class="mt-6">
         <h2 class="text-xl font-bold mb-4">Resultados de la Búsqueda</h2>
         <ul>
@@ -30,15 +41,16 @@
           </li>
         </ul>
       </div>
-
       <!-- Si no hay resultados -->
       <div th:if="${#lists.isEmpty(pagos)}" class="mt-6">
         <p>No se encontraron pagos que coincidan con la búsqueda.</p>
       </div>
 
-        <div class="mt-6">
-            <a href="/" class="text-blue-500 hover:underline">Volver al menú principal</a>
-        </div>
+      <div class="mt-6">
+        <a href="/" class="text-blue-500 hover:underline"
+          >Volver al menú principal</a
+        >
+      </div>
     </div>
-</body>
+  </body>
 </html>
