--- a/src/main/resources/templates/pedido-buscar.html
+++ b/src/main/resources/templates/pedido-buscar.html
@@ -4,12 +4,12 @@
     <title>Buscar Pedido</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
-  <body class="bg-gray-100 text-gray-800">
+  <body class="dark:bg-gray-800 text-gray-100 font-mono">
     <div class="container mx-auto py-10">
       <h1 class="text-2xl font-bold mb-4">Buscar Pedido</h1>
       <form action="/pedido/buscar" method="get" class="flex space-x-4">
         <!-- Campo select para elegir el criterio de búsqueda -->
-        <select name="criterio" class="border rounded py-2 px-3">
+        <select name="criterio" class="text-gray-800 border rounded py-2 px-3">
           <option value="nombreCliente">Nombre Cliente</option>
           <option value="estadoPedido">Estado</option>
         </select>
@@ -18,7 +18,7 @@
           type="text"
           name="busqueda"
           placeholder="Buscar por nombre del Cliente o estado del Pedido"
-          class="border rounded w-full py-2 px-3"
+          class="text-gray-800 border rounded w-full py-2 px-3"
           required
         />
 
